intel/bench_214_new/extr_.FFmpeglibavcodecsbc.c_ff_sbc_calculate_bits_with_main/log.txt
bench_214_new/extr_.FFmpeglibavcodecsbc.c_ff_sbc_calculate_bits_with_main/extr_.FFmpeglibavcodecsbc.c_ff_sbc_calculate_bits_with_main.c:81:21: error: use of undeclared identifier 'bits'
                    bits[ch][sb] = 0;
                    ^
bench_214_new/extr_.FFmpeglibavcodecsbc.c_ff_sbc_calculate_bits_with_main/extr_.FFmpeglibavcodecsbc.c_ff_sbc_calculate_bits_with_main.c:83:21: error: use of undeclared identifier 'bits'
                    bits[ch][sb] = bitneed[ch][sb] - bitslice;
                    ^
bench_214_new/extr_.FFmpeglibavcodecsbc.c_ff_sbc_calculate_bits_with_main/extr_.FFmpeglibavcodecsbc.c_ff_sbc_calculate_bits_with_main.c:84:25: error: use of undeclared identifier 'bits'
                    if (bits[ch][sb] > 16)
                        ^
bench_214_new/extr_.FFmpeglibavcodecsbc.c_ff_sbc_calculate_bits_with_main/extr_.FFmpeglibavcodecsbc.c_ff_sbc_calculate_bits_with_main.c:85:25: error: use of undeclared identifier 'bits'
                        bits[ch][sb] = 16;
                        ^
bench_214_new/extr_.FFmpeglibavcodecsbc.c_ff_sbc_calculate_bits_with_main/extr_.FFmpeglibavcodecsbc.c_ff_sbc_calculate_bits_with_main.c:91:22: error: use of undeclared identifier 'bits'
                if ((bits[ch][sb] >= 2) && (bits[ch][sb] < 16)) {
                     ^
bench_214_new/extr_.FFmpeglibavcodecsbc.c_ff_sbc_calculate_bits_with_main/extr_.FFmpeglibavcodecsbc.c_ff_sbc_calculate_bits_with_main.c:91:45: error: use of undeclared identifier 'bits'
                if ((bits[ch][sb] >= 2) && (bits[ch][sb] < 16)) {
                                            ^
bench_214_new/extr_.FFmpeglibavcodecsbc.c_ff_sbc_calculate_bits_with_main/extr_.FFmpeglibavcodecsbc.c_ff_sbc_calculate_bits_with_main.c:92:21: error: use of undeclared identifier 'bits'
                    bits[ch][sb]++;
                    ^
bench_214_new/extr_.FFmpeglibavcodecsbc.c_ff_sbc_calculate_bits_with_main/extr_.FFmpeglibavcodecsbc.c_ff_sbc_calculate_bits_with_main.c:95:21: error: use of undeclared identifier 'bits'
                    bits[ch][sb] = 2;
                    ^
bench_214_new/extr_.FFmpeglibavcodecsbc.c_ff_sbc_calculate_bits_with_main/extr_.FFmpeglibavcodecsbc.c_ff_sbc_calculate_bits_with_main.c:102:21: error: use of undeclared identifier 'bits'
                if (bits[ch][sb] < 16) {
                    ^
bench_214_new/extr_.FFmpeglibavcodecsbc.c_ff_sbc_calculate_bits_with_main/extr_.FFmpeglibavcodecsbc.c_ff_sbc_calculate_bits_with_main.c:103:21: error: use of undeclared identifier 'bits'
                    bits[ch][sb]++;
                    ^
bench_214_new/extr_.FFmpeglibavcodecsbc.c_ff_sbc_calculate_bits_with_main/extr_.FFmpeglibavcodecsbc.c_ff_sbc_calculate_bits_with_main.c:169:21: error: use of undeclared identifier 'bits'
                    bits[ch][sb] = 0;
                    ^
bench_214_new/extr_.FFmpeglibavcodecsbc.c_ff_sbc_calculate_bits_with_main/extr_.FFmpeglibavcodecsbc.c_ff_sbc_calculate_bits_with_main.c:171:21: error: use of undeclared identifier 'bits'
                    bits[ch][sb] = bitneed[ch][sb] - bitslice;
                    ^
bench_214_new/extr_.FFmpeglibavcodecsbc.c_ff_sbc_calculate_bits_with_main/extr_.FFmpeglibavcodecsbc.c_ff_sbc_calculate_bits_with_main.c:172:25: error: use of undeclared identifier 'bits'
                    if (bits[ch][sb] > 16)
                        ^
bench_214_new/extr_.FFmpeglibavcodecsbc.c_ff_sbc_calculate_bits_with_main/extr_.FFmpeglibavcodecsbc.c_ff_sbc_calculate_bits_with_main.c:173:25: error: use of undeclared identifier 'bits'
                        bits[ch][sb] = 16;
                        ^
bench_214_new/extr_.FFmpeglibavcodecsbc.c_ff_sbc_calculate_bits_with_main/extr_.FFmpeglibavcodecsbc.c_ff_sbc_calculate_bits_with_main.c:181:18: error: use of undeclared identifier 'bits'
            if ((bits[ch][sb] >= 2) && (bits[ch][sb] < 16)) {
                 ^
bench_214_new/extr_.FFmpeglibavcodecsbc.c_ff_sbc_calculate_bits_with_main/extr_.FFmpeglibavcodecsbc.c_ff_sbc_calculate_bits_with_main.c:181:41: error: use of undeclared identifier 'bits'
            if ((bits[ch][sb] >= 2) && (bits[ch][sb] < 16)) {
                                        ^
bench_214_new/extr_.FFmpeglibavcodecsbc.c_ff_sbc_calculate_bits_with_main/extr_.FFmpeglibavcodecsbc.c_ff_sbc_calculate_bits_with_main.c:182:17: error: use of undeclared identifier 'bits'
                bits[ch][sb]++;
                ^
bench_214_new/extr_.FFmpeglibavcodecsbc.c_ff_sbc_calculate_bits_with_main/extr_.FFmpeglibavcodecsbc.c_ff_sbc_calculate_bits_with_main.c:185:17: error: use of undeclared identifier 'bits'
                bits[ch][sb] = 2;
                ^
bench_214_new/extr_.FFmpeglibavcodecsbc.c_ff_sbc_calculate_bits_with_main/extr_.FFmpeglibavcodecsbc.c_ff_sbc_calculate_bits_with_main.c:200:17: error: use of undeclared identifier 'bits'
            if (bits[ch][sb] < 16) {
                ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
HLS FPGA Parse FAILED.
